--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,11 +47,12 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  RC.msg
-  Mode.msg
-  Battery.msg
-  State.msg
-  StateGroundTruth.msg
+  #RC.msg
+  #Mode.msg
+  #Battery.msg
+  #State.msg
+  #StateGroundTruth.msg
+   TwistCommand.msg
 
 )
 
